full screen UI on run

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,18 @@
     <script src="static/js/application.js"></script>
 
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <style>
+        body {
+            background-color: black;
+        }
+        
+        #content {
+            color: white;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    
-</div>
 
 <div class="container" id="content">
     <div class="row">
