--- a/main.css
+++ b/main.css
@@ -1,7 +1,10 @@
+body {
+    margin:0;
+}
 .header {
     display: flex;
     justify-content: space-between;
-    padding: 0 2rem 0 2rem;
+    padding: 1rem 2rem 1rem 2rem;
     border:1px solid black;
 }
 .sidenav {
@@ -9,9 +12,9 @@
   width: 160px;
   position: fixed;
   z-index: 1;
-  top: 4rem;
+  top: 3.3rem;
   left: 0;
-border: 1px black solid;
+  border: 1px black solid;
   overflow-x: hidden;
   padding-top: 20px;
 }
