--- a/main.css
+++ b/main.css
@@ -20,14 +20,13 @@ body {
   overflow-x: hidden;
   padding-top: 20px;
 }
-.navItems a:link {
+.sidenav a:link {
      display: block;
      color: black;
-     padding: 16px;
      text-decoration: none;
 }
 .main {
-    margin:0 20rem 0 20rem;
+    margin:0 20rem 4rem 20rem;
 }
 article {
     line-height: 1.8;
