--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@ body {
     background-color:#04AA6D;
     color:white;
 }
+/*header*/
 .header {
     display: flex;
     justify-content: space-between;
@@ -14,6 +15,7 @@ body {
 .header a:link {
     text-decoration: none;
 }
+/*side navigation bar */
 .sidenav {
   width: 160px;
   position: fixed;
@@ -35,6 +37,7 @@ body {
 .sidenav ul {
     padding-left:0;
 }
+/*green color on hover*/
 .active {
     background-color: #04AA6D;
     color: white;
@@ -43,7 +46,7 @@ body {
     background-color: rgb(216, 241, 232);
     color: black;
   }
-
+/*styling for the text*/
 .main {
     margin:0 20rem 4rem 20rem;
 }
@@ -66,7 +69,7 @@ article {
 .list-indent {
     margin-left: 40px;
 }
-
+/*responsive code*/
 @media only screen and (max-width: 990px) {
     .main {
         margin:0 10rem 4rem 15rem;
